[tool.poetry]
name = "morty-portal-gun"
version = "1.0.1"
description = ""
authors = ["test-python-wheel <test-python-wheel-project@outlook.com>"]
readme = "README.md"
packages = [{include = "morty_portal_gun"}]

[tool.poetry.scripts]
morty-portal-gun = "morty_portal_gun.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
tinydb = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
